force-app/main/default/objects/Messenger_Message__c/Messenger_Message__c.object-meta.xml
<CustomObject>
    <label>Messenger Message</label>
    <nameField>
        <label>Messenger Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messenger Message</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>