force-app/main/default/objects/Messenger_Message__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Messenger Message</relationshipLabel>
    <relationshipName>Messenger_Message</relationshipName>
    <type>Lookup</type>
</CustomField>