force-app/main/default/objects/Messenger_Message__c/fields/PSID__c.field-meta.xml
<CustomField>
    <fullName>PSID__c</fullName>
    <label>PSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>